# gymProjectCmake

./: README.md
test2/: CMakeLists.txt  base64format.cpp  blemanager.cpp  devicefinder.cpp  deviceinfo.cpp  main.cpp  main.qml  qml.qrc
test2/ui/: BLEDeviceConnectPage.qml  UserInfoPage.qml
